# General-Utilities

./: CMakeLists.txt  Dependencies.cmake  README.md
.cache/clangd/index/: FilePaths.cpp.D68362B5ADB714B4.idx  FilePaths.h.A97E65098212E66E.idx  fileReading.cpp.CA555E547B439AF5.idx  fileReading.h.C6C6B9626C5F2406.idx
src/: FilePaths.cpp  FilePaths.h
